Changed *.html dir, added error page

--- a/html/error.html
+++ b/html/error.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <style type="text/css">
     :root {
-      background: #503750;
+      background: #ffc107;
     }
     body {
       padding: 15vh 5vw;
@@ -30,8 +30,10 @@
   <body>
     <div class="container">
       <div>
-        <h1> To view your passport, please log in with your Spotify account.</h1>
-        <a href="login" class="btn btn-primary btn-aubergine" role="link">Log in with Spotify</a>
+        <h1> Oops! Something went wrong! 
+          <p> To view your passport, please return to the home page and log in. </p>
+        </h1>
+        <a href="/" class="btn btn-warning" role="link">Take me back</a>
       </div>
     </div>
 
@@ -46,4 +48,3 @@
     <script src="https://kit.fontawesome.com/bab8a72573.js" crossorigin="anonymous"></script>
   </body>
 </html>
-
